--- a/style.css
+++ b/style.css
@@ -19,7 +19,10 @@
     --fc-body-span-text: #FFDAB9;
     /*fs = font size ou tamanho da fonte*/
     --fs-header-text: 40px;
+    --fs-header-text-media: 25px;
     --fs-body-text: 60px;
+    --fs-body-text-media: 25px;
+    --fs-body-text-media-menor: 20px;
     --fs-body-text-lateral: 12px;
     --fs-btn-text: 26px;
     /*fw = font width ou largura da fonte*/
@@ -207,4 +210,58 @@ body{
 
 .info span {
     color: var(--fc-body-span-text);
+}
+
+@media (max-width: 1115px) {
+    .conteiner_heard{
+        width: 100%;
+        text-align: center;
+        font-size:var(--fs-header-text-media);
+        font-weight: var(--fw-header-text);
+        color: var(--fc-main-text);
+    }
+    /*Caixa de cor*/
+    .color_box{
+        height: 95px;
+        width: 120px;
+        background-color: rgb(255, 225, 185);
+        border-radius: 20px;
+        border:solid #00000056 1px;
+    }
+    /*informação de cor*/
+    .color_info{
+        height: 10px;
+        width: calc(100% - 150px);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        font-size: var(--fs-body-text-media);
+        font-weight: var(--fw-body-text);
+        color: var(--fc-btn-text);
+    }
+    .color_info .color_value {
+        width: 85.5%;
+        background-color: #001F64;
+        border-radius: 10px;
+        margin: 10px 0;
+        padding: 15px;
+    }
+    .color_info span {
+        color: var(--fc-body-span-text);
+    }
+}
+
+@media (max-width:680px){
+    .color_info{
+        height: 1px;
+        width: calc(100% - 130px);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        font-size: var(--fs-body-text-media-menor);
+        font-weight: var(--fw-body-text);
+        color: var(--fc-btn-text);
+    }
 }
